--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
+#  sdk: ">=2.12.0-29.10.beta <3.0.0"
 
 dependencies:
   flutter:
@@ -28,8 +29,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+4
+  firebase_auth: ^0.18.4+1
+  firebase_core: ^0.5.3
+  cloud_firestore:
+#  cloud_firestore: ^0.12.9+4
+#  firebase_auth: ^0.14.0+5
+#  firebase_core: ^0.4.0
 
 dev_dependencies:
   flutter_test:
