--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^0.18.4+1
-  firebase_core: ^0.5.3
-  cloud_firestore:
-#  cloud_firestore: ^0.12.9+4
-#  firebase_auth: ^0.14.0+5
-#  firebase_core: ^0.4.0
+  firebase_auth: ^3.0.1
+  cloud_firestore: ^2.4.0
+  firebase_core: ^1.4.0
 
 dev_dependencies:
   flutter_test:
