--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.2.0 <3.0.0'
+#  sdk: '>=2.12.0 <3.0.0'
 #  sdk: ">=2.12.0-29.10.beta <3.0.0"
 
 dependencies:
@@ -29,8 +30,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.0.1
-  cloud_firestore: ^2.4.0
+  firebase_auth: ^0.18.4+1
+  cloud_firestore:
+  provider: ^5.0.0
+#  firebase_core: ^0.5.3
 
 dev_dependencies:
   flutter_test:
