--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^0.18.4+1
   cloud_firestore:
   provider: ^5.0.0
+  flutter_spinkit: ^4.0.0
 #  firebase_core: ^0.5.3
 
 dev_dependencies:
